--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,7 @@
     "@marsidev/react-turnstile": "^1.1.0",
     "axios": "^1.9.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-quill": "^2.0.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
