--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,13 @@
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
+    "geoip-lite": "^1.4.10",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "path": "^0.12.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "useragent": "^2.3.0"
   }
 }
