--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.10",
     "http": "^0.0.1-security",
+    "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
