--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "agora-access-token": "^2.0.4",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "cheerio": "^1.1.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
