--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.5",
     "path": "^0.12.7",
     "socket.io": "^4.8.1",
     "useragent": "^2.3.0"
