--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.5",
     "path": "^0.12.7",
+    "resend": "^6.1.3",
     "socket.io": "^4.8.1",
     "useragent": "^2.3.0"
   }
