--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.10",
+    "googleapis": "^164.0.0",
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
