--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,9 @@
     "googleapis": "^164.0.0",
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^3.0.5",
+    "isomorphic-dompurify": "^2.31.0",
     "jsonwebtoken": "^9.0.2",
+    "marked": "^17.0.0",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.5",
