--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@google/generative-ai": "^0.24.1",
     "@sendgrid/mail": "^8.1.5",
     "agora-access-token": "^2.0.4",
+    "apicache": "^1.6.3",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
