--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "express-validator": "^7.3.0",
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.10",
@@ -35,8 +36,11 @@
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "resend": "^6.1.3",
+    "session": "^0.1.0",
     "socket.io": "^4.8.1",
     "useragent": "^2.3.0"
   }
