--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@google-cloud/storage": "^7.17.3",
     "@google/generative-ai": "^0.24.1",
     "@sendgrid/mail": "^8.1.5",
     "agora-access-token": "^2.0.4",
