--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "resend": "^6.1.3",
     "session": "^0.1.0",
     "socket.io": "^4.8.1",
-    "useragent": "^2.3.0"
+    "useragent": "^2.3.0",
+    "xlsx": "^0.18.5"
   }
 }
