--- a/backend/package.json
+++ b/backend/package.json
@@ -34,15 +34,20 @@
     "isomorphic-dompurify": "^2.31.0",
     "jsonwebtoken": "^9.0.2",
     "marked": "^17.0.0",
+    "mediasoup": "^3.19.13",
+    "mediasoup-client": "^3.18.1",
     "mongoose": "^8.14.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "recordrtc": "^5.6.2",
     "resend": "^6.1.3",
     "session": "^0.1.0",
+    "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "useragent": "^2.3.0",
     "xlsx": "^0.18.5"
   }
