--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-backend/.env
+backend/
+.env
+.env.local
+.env.production
+logs/
+*.log
+coverage/
 backend/node_modules/
 backend/keys/
+.DS_Store
+dist/
+build/
