--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,7 @@
     "@sendgrid/mail": "^8.1.5",
     "agora-access-token": "^2.0.4",
     "apicache": "^1.6.3",
-    "axios": "^1.9.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
     "cookie-parser": "^1.4.7",
@@ -24,11 +26,14 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
-    "express-validator": "^7.3.0",
+    "express-slow-down": "^3.0.1",
+    "express-validator": "^7.3.1",
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.10",
     "googleapis": "^164.0.0",
+    "helmet": "^8.1.0",
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^3.0.5",
     "isomorphic-dompurify": "^2.31.0",
@@ -37,18 +42,28 @@
     "mediasoup": "^3.19.13",
     "mediasoup-client": "^3.18.1",
     "mongoose": "^8.14.1",
+    "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "rate-limit-redis": "^4.3.1",
     "recordrtc": "^5.6.2",
+    "redis": "^5.10.0",
     "resend": "^6.1.3",
     "session": "^0.1.0",
     "simple-peer": "^9.11.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "useragent": "^2.3.0",
+    "validator": "^13.15.23",
+    "winston": "^3.19.0",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.4"
   }
 }
