--- a/backend/package.json
+++ b/backend/package.json
@@ -21,19 +21,23 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
+    "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
     "express-slow-down": "^3.0.1",
     "express-validator": "^7.3.1",
+    "express-winston": "^4.2.0",
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.10",
     "googleapis": "^164.0.0",
     "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^3.0.5",
     "isomorphic-dompurify": "^2.31.0",
@@ -59,7 +63,8 @@
     "useragent": "^2.3.0",
     "validator": "^13.15.23",
     "winston": "^3.19.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xss-clean": "^0.1.4"
   },
   "devDependencies": {
     "jest": "^30.2.0",
