--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
@@ -52,6 +52,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
+    "path-to-regexp": "^6.3.0",
     "rate-limit-redis": "^4.3.1",
     "recordrtc": "^5.6.2",
     "redis": "^5.10.0",
