--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "path-to-regexp": "^6.3.0",
