--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
+    "cloudinary": "^1.41.3",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -48,6 +49,7 @@
     "mongoose": "^8.14.1",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-github2": "^0.1.12",
