--- a/backend/package.json
+++ b/backend/package.json
@@ -26,7 +26,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.2.1",
@@ -34,6 +34,7 @@
     "express-slow-down": "^3.0.1",
     "express-validator": "^7.3.1",
     "express-winston": "^4.2.0",
+    "firebase-admin": "^13.6.0",
     "fs": "^0.0.1-security",
     "geoip-lite": "^1.4.10",
     "googleapis": "^164.0.0",
